--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/IMG_20221210_201901-removebg-preview (1).png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -40,7 +40,8 @@
     <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
-          <!-- img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px" -->
+          <img src="assets/img/IMG_20221210_201710-removebg-preview (1).png" alt="" class="img-fluid rounded-circle"
+            style="float:center;width:200px">
           <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
           <p>
             <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
@@ -68,7 +69,8 @@
               <h4>Νeα δικηγoρος</h4>
               <h5> Δεκέμβριος 2021 - σήμερα</h5>
               <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-                  Ενδεικτικά· συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε υποθηκοφυλακεία,
+                  Ενδεικτικά· συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε
+                  υποθηκοφυλακεία,
                   διαπραγμάτευση όρων σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
                   εγγράφων. </em></p>
             </div>
@@ -80,8 +82,8 @@
                   Α.Ε."
                   Eκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων. </em></p>
               <ul>
-              <li> Υποθέσεις τραπεζικού, αστικού, εμπορικού δικαίου και πολιτικής δικονομίας</li>    
-                </ul>
+                <li> Υποθέσεις τραπεζικού, αστικού, εμπορικού δικαίου και πολιτικής δικονομίας</li>
+              </ul>
             </div>
             <div class="resume-item pb-0">
               <!-- <h4>Νεα δικηγορος</h4> -->
@@ -91,11 +93,13 @@
                   βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα. </em>
               </p>
               <ul>
-              <li> Σύνταξη δικοφράφων (αιτήσεις ακύρωσης, αναστολής και προσωρινών διαταγών ενώπιον των διοικητικών δικαστηρίων,
-                ασφαλιστικών μέτρων, προσωρινών διαταγών και αγωγών ενώπιον των πολιτικών δικαστηρίων, εξωδίκων καταγγελιών) </li>
-              <li> Κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές </li>
-              <li> Νομική έρευνα - Αναζήτηση νομολογίας </li>
-                </ul>
+                <li> Σύνταξη δικογράφων (αιτήσεις ακύρωσης, αναστολής και προσωρινών διαταγών ενώπιον των διοικητικών
+                  δικαστηρίων,
+                  ασφαλιστικών μέτρων, προσωρινών διαταγών και αγωγών ενώπιον των πολιτικών δικαστηρίων, εξωδίκων
+                  καταγγελιών) </li>
+                <li> Κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές </li>
+                <li> Νομική έρευνα - Αναζήτηση νομολογίας </li>
+              </ul>
             </div>
             <div class="resume-item pb-0">
               <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
@@ -113,127 +117,134 @@
                 <li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιρειών) </li>
                 <li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
                 <li>Σύνταξη νομικών κειμένων</li>
-                <li>Αναζήτηση νομολογίας </li>          
+                <li>Αναζήτηση νομολογίας </li>
               </ul>
-                
+
               <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
               <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
-                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου. 
-                  Ενδεικτικά· διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης οφειλών, εργατικού δικαίου,
-                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση εμπορικού σήματος </li>
-                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές, παρακολούθηση πορείας των υποθέσεων)</li>
-                 <li> Παρακολούθηση διαδικασίας, αιτήσεις αναβολών και αναγγελίες ενώπιον των ακροατηρίων </li>
+                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου.
+                  Ενδεικτικά· διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης
+                  οφειλών, εργατικού δικαίου,
+                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση
+                  εμπορικού σήματος </li>
+                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές,
+                  παρακολούθηση πορείας των υποθέσεων)</li>
+                <li> Παρακολούθηση διαδικασίας, αιτήσεις αναβολών και αναγγελίες ενώπιον των ακροατηρίων </li>
                 <li>Συνδρομή στη σύνταξη δικογράφων </li>
                 <li>Σύνταξη δικογράφων και νομικών εγγράφων (αγωγή διαζυγίου, εξωδίκων καταγγελιών) </li>
                 <li>Νομική έρευνα - αναζήτηση νομολογίας </li>
                 <li>Έρευνα σε υποθηκοφυλακεία</li>
                 <li> Μεταφράσεις εγγράφων </li>
               </ul>
-          
-          </div>
-          <div class="col" data-aos="fade-up" data-aos-delay="40">
-            <h3 class="resume-title">Εκπαίδευση</h3>
-            <div class="resume-item">
-              <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
-              <h5>2013 – 2018</h5>
-              <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
+
             </div>
-            <h3 class="resume-title">Δεξιότητες</h3>
-            <div class="resume-item">
-              <h4>ΓΛΩΣΣΕΣ</h4>
-              <li>Γαλλικά</li>
-              <p><em>DALF C2 </em></p>
-              <li>Αγγλικά</li>
-              <p><em>Michigan Examination for the Certificate of Proficiency in
-                  English (ECPE)</em></p>
+            <div class="col" data-aos="fade-up" data-aos-delay="40">
+              <h3 class="resume-title">Εκπαίδευση</h3>
+              <div class="resume-item">
+                <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
+                <h5>2013 – 2018</h5>
+                <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
+              </div>
+              <h3 class="resume-title">Δεξιότητες</h3>
+              <div class="resume-item">
+                <h4>ΓΛΩΣΣΕΣ</h4>
+                <li>Γαλλικά</li>
+                <p><em>DALF C2 </em></p>
+                <li>Αγγλικά</li>
+                <p><em>Michigan Examination for the Certificate of Proficiency in
+                    English (ECPE)</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>ΧΡΗΣΗ Η/Υ</h4>
+                <li>Microsoft Office</li>
+              </div>
+              <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
+              <div class="resume-item">
+                <h4>Νομικη Σχολη Αθηνων</h4>
+                <h5>Χειμερινό εξάμηνο 2018
+                  Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
+                <p><em>"Τα πνευματικά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
+              </div>
+              <div class="resume-item">
+                <h5>Χειμερινό εξάμηνο 2018
+                  Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
+                <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>ΑΣΚΤ</h4>
+                <h5>2018-2023</h5>
+                <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης,
+                    αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
+              </div>
+              <h3 class="resume-title">Επιπρόσθετη ακαδημαϊκή & εργασιακή εμπειρία</h3>
+              <div class="resume-item">
+                <h4>ΑΝΩΤΑΤΗ ΣΧΟΛΗ ΚΑΛΩΝ ΤΕΧΝΩΝ</h4>
+                <h5>2018 - 2023</h5>
+                <p><em>Θεωρία και Ιστορία της Τέχνης</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
+                <h5>Νοέμβριος 2021 - Δεκέμβριος 2021</h5>
+                <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών
+                    Laika
+                    Productions.
+                    Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
+                    Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή
+                    ντοκιμαντέρ.</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
+                <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
+                <p><em>Συνεργασία στη λειτουργία του φουαγιέ του θεάτρου.</em></p>
+              </div>
             </div>
-            <div class="resume-item">
-              <h4>ΧΡΗΣΗ Η/Υ</h4>
-              <li>Microsoft Office</li>
+            <div class="col" data-aos="fade-up" data-aos-delay="40">
+              <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
+              <div class="resume-item">
+                <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικα με ζητηματα Πνευματικης Ιδιοκτησιας
+                  και νεων τεχνολογιων </h4>
+              </div>
+              <div class="resume-item">
+                <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
+                <h5>Μάρτιος- Απρίλιος 2018 </h5>
+                <p><em>Νομική σχολή Αθηνών</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>Φεστιβαλ «Μικρο Παρισι των Αθηνων», Petit Paris d’ Athènes
+                  Athens Art Network - Αθηναϊκο Καλλιτεχνικο Δικτυο</h4>
+                <h5>Οκτώβριος 2017 & 2018</h5>
+              </div>
+              <div class="resume-item">
+                <h4>Κυκλος σεμιναριων Πολιτιστικης Διαχειρισης </h4>
+                <h5>Οκτώβριος 2017</h5>
+                <p><em>Φεστιβάλ «Μικρό Παρίσι των Αθηνών 2017»</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>Athens Photo Festival (APhF : 2017)</h4>
+                <h5>Ιούνιος – Ιούλιος 2017</h5>
+                <p><em>Μουσείο Μπενάκη, Κτίριο Πειραιώς</em></p>
+              </div>
+              <div class="resume-item">
+                <h4>Σεμιναριο με τιτλο «Το εγκλημα των αδελφων Παπεν»</h4>
+                <h5>Μάιος 2017</h5>
+                <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος
+                    Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em>
+                </p>
+              </div>
+              <div class="resume-item">
+                <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
+                <h5>Στρασβούργο, Απρίλιος 2012</h5>
+                <p><em>EUROSCOLA</em></p>
+              </div>
             </div>
-            <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
-            <div class="resume-item">
-              <h4>Νομικη Σχολη Αθηνων</h4>
-              <h5>Χειμερινό εξάμηνο 2018
-                Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
-              <p><em>"Τα πνευματικά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>Χειμερινό εξάμηνο 2018
-                Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
-              <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>ΑΣΚΤ</h4>
-              <h5>2018-2023</h5>
-              <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης,
-                  αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
-            </div>
-            <h3 class="resume-title">Επιπρόσθετη ακαδημαϊκή & εργασιακή εμπειρία</h3>
-            <div class="resume-item">
-              <h4>ΑΝΩΤΑΤΗ ΣΧΟΛΗ ΚΑΛΩΝ ΤΕΧΝΩΝ</h4>
-              <h5>2018 - 2023</h5>
-              <p><em>Θεωρία και Ιστορία της Τέχνης</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
-              <h5>Νοέμβριος 2021 - Δεκέμβριος 2021</h5>
-              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika
-                  Productions.
-                  Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
-                  Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή
-                  ντοκιμαντέρ.</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
-              <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
-              <p><em>Συνεργασία στη λειτουργία του φουαγιέ του θεάτρου.</em></p>
-            </div>
-          </div>
-          <div class="col" data-aos="fade-up" data-aos-delay="40">
-            <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
-            <div class="resume-item">
-              <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικα με ζητηματα Πνευματικης Ιδιοκτησιας και νεων τεχνολογιων </h4>      
-            </div>
-            <div class="resume-item">
-              <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
-              <h5>Μάρτιος- Απρίλιος 2018 </h5>
-              <p><em>Νομική σχολή Αθηνών</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Φεστιβαλ «Μικρο Παρισι των Αθηνων», Petit Paris d’ Athènes
-                Athens Art Network - Αθηναϊκο Καλλιτεχνικο Δικτυο</h4>
-              <h5>Οκτώβριος 2017 & 2018</h5>
-            </div>
-            <div class="resume-item">
-              <h4>Κυκλος σεμιναριων Πολιτιστικης Διαχειρισης </h4>
-              <h5>Οκτώβριος 2017</h5>
-              <p><em>Φεστιβάλ «Μικρό Παρίσι των Αθηνών 2017»</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Athens Photo Festival (APhF : 2017)</h4>
-              <h5>Ιούνιος – Ιούλιος 2017</h5>
-              <p><em>Μουσείο Μπενάκη, Κτίριο Πειραιώς</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Σεμιναριο με τιτλο «Το εγκλημα των αδελφων Παπεν»</h4>
-              <h5>Μάιος 2017</h5>
-              <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος
-                  Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
-              <h5>Στρασβούργο, Απρίλιος 2012</h5>
-              <p><em>EUROSCOLA</em></p>
-            </div>
-          </div>
-          <!-- <div class="col-4" data-aos="fade-up" data-aos-delay="40">
+            <!-- <div class="col-4" data-aos="fade-up" data-aos-delay="40">
           </div> -->
+          </div>
         </div>
-      </div>
     </section><!-- End Resume Section -->
+
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
