--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
-          <img src="assets/img/IMG_20221210_201710-removebg-preview (1).png" alt="" class="img-fluid rounded-circle"
+          <img src="assets/img/IMG.png" alt="" class="img-fluid rounded-circle"
             style="float:center;width:200px">
           <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
           <p>
