--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
+  <title>Sofianna Bali - Cirriculum Vitae</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,200 +42,186 @@
         <div class="section-title">
           <img src="assets/img/IMG.png" alt="" class="img-fluid rounded-circle"
             style="float:center;width:200px">
-          <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
+          <h2> Bali Sofianna - Cirriculum Vitae</h2>
           <p>
             <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
-            <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
+            <strong>Phone number:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
             <strong>Email:</strong> <a href="mailto:sofianna.bali@hotmail.com">sofianna.bali@hotmail.com</a> |
-            <strong>Πόλη:</strong> Αθήνα
+            <strong>City:</strong> Athens
           </p>
         </div>
         <div class="row" data-aos="fade-up" data-aos-delay="40">
-          <h3 class="resume-title">Περίληψη</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <p>
-              Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικαστηριακή εμπειρία σε όλο το φάσμα του
-              δικαίου.
-              Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας.
-              Επιθυμία για ουσιαστική ενασχόληση με λοιπούς κλάδους του δικαίου· ενδεικτικά, αστικό, νέες τεχνολογίες,
-              GDPR, εμπορικό, εργατικό, αλλοδαπών.
+              
+            Junior lawyer experienced in consultancy and litigation in the whole range of
+            law.
+              Particularly interested in intellectual property law.
+              Desire for substantial involvement in other fields of law; including, but not limited to, civil law, new technologies,
+              GDPR, commercial, employment, immigration law.
             <p>
           </div>
         </div>
         <div class="row" data-aos="fade-up" data-aos-delay="40">
           <div class="col" data-aos="fade-up" data-aos-delay="40">
-            <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
+            <h3 class="resume-title">Working Experience</h3>
             <div class="resume-item pb-0">
-              <h4>Νeα δικηγoρος</h4>
-              <h5> Δεκέμβριος 2021 - σήμερα</h5>
-              <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-                  Ενδεικτικά· συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε
-                  υποθηκοφυλακεία,
-                  διαπραγμάτευση όρων σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
-                  εγγράφων. </em></p>
+              <h4>Junior Lawyer</h4>
+              <h5> December 2021 - Present</h5>
+              <p><em> Self-employed attorney at law
+                  Indicatively- advising on the purchase and sale of real estate, research of property titles and control of encumbrances in
+                  mortgage offices,
+                  negotiating the terms of an intellectual property exploitation contract, document translation and validation. </em></p>
             </div>
             <div class="resume-item pb-0">
-              <!-- <h4>Νεα δικηγορος</h4> -->
-              <h5>Ιούλιος 2022 - Δεκέμβριος 2022 </h5>
-              <p><em>Νομική συνεργάτιδα της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
-                  Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ
-                  Α.Ε."
-                  Eκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων. </em></p>
+              <!-- <h4Junior Lawyer</h4> -->
+              <h5>July 2022 - December 2022 </h5>
+              <p><em> Legal associate "MTC – MAKEDONIKI TECHNICAL COMPANY".
+                  Provision of independent services in the context of a project undertaken by the company "PQH Single Special Liquidator
+                  S.A."
+                  Liquidation of credit institutions. Department of guaranteed loans. </em></p>
               <ul>
-                <li> Υποθέσεις τραπεζικού, αστικού, εμπορικού δικαίου και πολιτικής δικονομίας</li>
+                <li>Banking, civil, commercial and civil procedure cases</li>
               </ul>
             </div>
             <div class="resume-item pb-0">
-              <!-- <h4> Νεα δικηγορος</h4> -->
-              <h5>Σεπτέμβριος - Οκτώβριος 2021 </h5>
-              <p><em>Δικηγορικό Γραφείο Στέλιου Γκαρίπη </em></p>
-              <p><em>Συνεργασία σε υποθέσεις δημοσίου, εταιρικού, αστικού δικαίου και
-                  βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα. </em>
+              <!-- <h4> Junior Lawyer</h4> -->
+              <h5>September - October 2021 </h5>
+              <p><em>Stelios Garipis Law Office </em></p>
+              <p><em>Cooperation in public, corporate, civil and industrial property cases. Dealing with basic legislation on medical devices. </em>
               </p>
               <ul>
-                <li> Σύνταξη δικογράφων (αιτήσεις ακύρωσης, αναστολής και προσωρινών διαταγών ενώπιον των διοικητικών
-                  δικαστηρίων,
-                  ασφαλιστικών μέτρων, προσωρινών διαταγών και αγωγών ενώπιον των πολιτικών δικαστηρίων, εξωδίκων
-                  καταγγελιών) </li>
-                <li> Κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές </li>
-                <li> Νομική έρευνα - Αναζήτηση νομολογίας </li>
+                <li> Drafting legal papers before the administrative and civil courts </li>
+                <li> Filing-receipt of documents </li>
+                <li> Legal research - Case-law searching</li>
               </ul>
             </div>
             <div class="resume-item pb-0">
-              <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
-              <h5> Σεπτέμβριος 2021 </h5>
+              <h4>Licence to practice law - Athens Bar Association</h4>
+              <h5> September 2021 </h5>
             </div>
             <div class="resume-item pb-0">
-              <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
-              <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
-              <p><em>Περιφέρεια Αττικής - Αυτοτελές Τμήμα Νομικής Υποστήριξης - Γραφείο Νομοθετικού Συντονισμού και
-                  Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
-                  Νήσων_Παρέχεται συστατική επιστολή κατόπιν σχετικού αιτήματος </em></p>
+              <h4>TRAINEE LAWYER</h4>
+              <h5>March 2020 – September 2020</h5>
+              <p><em> Region of Attica - Independent Department of Legal Support - Office of Legislative Coordination and Judicial Affairs of 
+                the Regional Units of Piraeus and Islands_A letter of recommendation is available upon request</em></p>
               <ul>
-                <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
-                <li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
-                <li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιρειών) </li>
-                <li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
-                <li>Σύνταξη νομικών κειμένων</li>
-                <li>Αναζήτηση νομολογίας </li>
+                <li>Dealing with the full spectrum of law</li>
+                <li>Administrative law issues, procedural issues (urban planning, public procurement, technical works)</li>
+                <li>Commercial and company law issues (dissolution of commercial companies) </li>
+                <li>Labour law issues and broader civil law issues</li>
+                <li>Drafting legal papers</li>
+                <li>Case-law searching </li>
               </ul>
 
-              <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
-              <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
+              <h5>April 2019 - December 2019</h5>
+              <p><em>Athanassios Tetwros and Associates Law Office </em></p>
               <ul>
-                <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
-                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου.
-                  Ενδεικτικά· διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης
-                  οφειλών, εργατικού δικαίου,
-                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση
-                  εμπορικού σήματος </li>
-                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές,
-                  παρακολούθηση πορείας των υποθέσεων)</li>
-                <li> Παρακολούθηση διαδικασίας, αιτήσεις αναβολών και αναγγελίες ενώπιον των ακροατηρίων </li>
-                <li>Συνδρομή στη σύνταξη δικογράφων </li>
-                <li>Σύνταξη δικογράφων και νομικών εγγράφων (αγωγή διαζυγίου, εξωδίκων καταγγελιών) </li>
-                <li>Νομική έρευνα - αναζήτηση νομολογίας </li>
-                <li>Έρευνα σε υποθηκοφυλακεία</li>
-                <li> Μεταφράσεις εγγράφων </li>
+                <li> Dealing with the full spectrum of law</li>
+                <li>Civil, commercial, criminal and administrative law cases.
+                  Indicatively - land registry disputes, divorce-custody-maintenance, representation of companies, debt settlement, labour law,
+                tenancy disputes, appeals against payment orders - executions, enforcement of penalties, trademarks.</li>
+                <li>External work (filing-receipt of documents, communication with judicial officers, monitoring the progress of cases)</li>
+                <li>Legal research - Case-law searching</li>
+                <li>Legal research in mortgage offices</li>
+                <li> Document translation  </li>
               </ul>
 
             </div>
             <div class="col" data-aos="fade-up" data-aos-delay="40">
-              <h3 class="resume-title">Εκπαίδευση</h3>
+              <h3 class="resume-title">Education</h3>
               <div class="resume-item">
-                <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
+                <h4>LAW SCHOOL</h4>
                 <h5>2013 – 2018</h5>
-                <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
+                <p><em>National and Kapodistrian University of Athens</em></p>
               </div>
-              <h3 class="resume-title">Δεξιότητες</h3>
+              <h3 class="resume-title">Skills</h3>
               <div class="resume-item">
-                <h4>ΓΛΩΣΣΕΣ</h4>
-                <li>Γαλλικά</li>
+                <h4>LANGUAGES</h4>
+                <li>French</li>
                 <p><em>DALF C2 </em></p>
-                <li>Αγγλικά</li>
+                <li>English</li>
                 <p><em>Michigan Examination for the Certificate of Proficiency in
                     English (ECPE)</em></p>
               </div>
               <div class="resume-item">
-                <h4>ΧΡΗΣΗ Η/Υ</h4>
+                <h4>COMPUTER</h4>
                 <li>Microsoft Office</li>
               </div>
-              <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
+              <h3 class="resume-title">Academic assignments</h3>
               <div class="resume-item">
-                <h4>Νομικη Σχολη Αθηνων</h4>
-                <h5>Χειμερινό εξάμηνο 2018
-                  Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
-                <p><em>"Τα πνευματικά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
+                <h4>Athens Law School</h4>
+                <h5>Winter semester 2018
+                  Supervisor: Christodoulou Konstantinos</h5>
+                <p><em>"Photographers' copyright and their legal protection"</em></p>
               </div>
               <div class="resume-item">
-                <h5>Χειμερινό εξάμηνο 2018
-                  Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
-                <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
+                <h5>Winter semester 2018
+                  Supervisor: Koufou Athina</h5>
+                <p><em>"Antiquities. Illegal trafficking in cultural goods"</em></p>
               </div>
               <div class="resume-item">
-                <h4>ΑΣΚΤ</h4>
+                <h4>ASFA</h4>
                 <h5>2018-2023</h5>
-                <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης,
-                    αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
+                <p><em>Numerous academic assignements in the fields of philosophy and aesthetics of art, art history,architecture, photography, pedagogy.  </em></p>
               </div>
-              <h3 class="resume-title">Επιπρόσθετη ακαδημαϊκή & εργασιακή εμπειρία</h3>
+              <h3 class="resume-title">Additional academic & work experience</h3>
               <div class="resume-item">
-                <h4>ΑΝΩΤΑΤΗ ΣΧΟΛΗ ΚΑΛΩΝ ΤΕΧΝΩΝ</h4>
+                <h4>ATHENS SCHOOL OF FINE ARTS</h4>
                 <h5>2018 - 2023</h5>
-                <p><em>Θεωρία και Ιστορία της Τέχνης</em></p>
+                <p><em>Theory and History of Art</em></p>
               </div>
               <div class="resume-item">
-                <h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
-                <h5>Νοέμβριος 2021 - Δεκέμβριος 2021</h5>
-                <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών
+                <h4> INTERSHIP IN AN FILM PRODUCTION COMPANY </h4>
+                <h5>November 2021 - December 2021</h5>
+                <p><em>Production organisation assistant at the film, TV and music production company
                     Laika
                     Productions.
-                    Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
-                    Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή
-                    ντοκιμαντέρ.</em></p>
+                    Participation as a production assistant in a short film.
+Archival research for the pre production of documentaries.</em></p>
               </div>
               <div class="resume-item">
-                <h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
-                <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
-                <p><em>Συνεργασία στη λειτουργία του φουαγιέ του θεάτρου.</em></p>
+                <h4>"AGGELWN VHMA" THEATER</h4>
+                <h5>November 2018 - March 2019</h5>
+                <p><em>Cooperation in the operation of theatre foyer.</em></p>
               </div>
             </div>
             <div class="col" data-aos="fade-up" data-aos-delay="40">
-              <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
+              <h3 class="resume-title">Seminars - Volunteering</h3>
               <div class="resume-item">
-                <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικα με ζητηματα Πνευματικης Ιδιοκτησιας
-                  και νεων τεχνολογιων </h4>
+                <h4>Attendance of seminars and scientific events on intellectual property issues and new technologies </h4>
               </div>
               <div class="resume-item">
-                <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
-                <h5>Μάρτιος- Απρίλιος 2018 </h5>
-                <p><em>Νομική σχολή Αθηνών</em></p>
+                <h4>Circle of free courses in forensic writing </h4>
+                <h5>March - April 2018 </h5>
+                <p><em>Athens Law School</em></p>
               </div>
               <div class="resume-item">
-                <h4>Φεστιβαλ «Μικρο Παρισι των Αθηνων», Petit Paris d’ Athènes
-                  Athens Art Network - Αθηναϊκο Καλλιτεχνικο Δικτυο</h4>
-                <h5>Οκτώβριος 2017 & 2018</h5>
+                <h4> "Petit Paris d’ Athènes" FESTIVAL
+                  Athens Art Network </h4>
+                <h5>October 2017 & 2018</h5>
               </div>
               <div class="resume-item">
-                <h4>Κυκλος σεμιναριων Πολιτιστικης Διαχειρισης </h4>
-                <h5>Οκτώβριος 2017</h5>
-                <p><em>Φεστιβάλ «Μικρό Παρίσι των Αθηνών 2017»</em></p>
+                <h4>Cultural Management Seminar Cycle </h4>
+                <h5>October 2017</h5>
+                <p><em>"Petit Paris d’ Athènes" festival 2017»</em></p>
               </div>
               <div class="resume-item">
                 <h4>Athens Photo Festival (APhF : 2017)</h4>
-                <h5>Ιούνιος – Ιούλιος 2017</h5>
-                <p><em>Μουσείο Μπενάκη, Κτίριο Πειραιώς</em></p>
+                <h5>June - July 2017</h5>
+                <p><em>Benaki Museum, Piraeus Building</em></p>
               </div>
               <div class="resume-item">
-                <h4>Σεμιναριο με τιτλο «Το εγκλημα των αδελφων Παπεν»</h4>
-                <h5>Μάιος 2017</h5>
-                <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος
-                    Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em>
+                <h4>Seminar entitled "The Papen sisters' crime"</h4>
+                <h5>May2017</h5>
+                <p><em> Criminal and Forensic Investigation Laboratory of the Department of Law 
+                  of the University of Athens in collaboration with the Athens Psychoanalytic Research Centre</em>
                 </p>
               </div>
               <div class="resume-item">
-                <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
-                <h5>Στρασβούργο, Απρίλιος 2012</h5>
+                <h4>Visit to the European Parliament</h4>
+                <h5>Strasbourg, April 2012</h5>
                 <p><em>EUROSCOLA</em></p>
               </div>
             </div>
