--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class="resume-item pb-0">
               <h4>Junior Lawyer</h4>
               <h5> December 2021 - Present</h5>
-              <p><em> Self-employed attorney at law
-                  Indicatively- advising on the purchase and sale of real estate, research of property titles and control of encumbrances in
+              <p><em> Self-employed attorney at law.
+                  Indicatively; advising on the purchase and sale of real estate, research of property titles and control of encumbrances in
                   mortgage offices,
                   negotiating the terms of an intellectual property exploitation contract, document translation and validation. </em></p>
             </div>
@@ -120,7 +120,7 @@
               <ul>
                 <li> Dealing with the full spectrum of law</li>
                 <li>Civil, commercial, criminal and administrative law cases.
-                  Indicatively - land registry disputes, divorce-custody-maintenance, representation of companies, debt settlement, labour law,
+                  Indicatively; land registry disputes, divorce-custody-maintenance, representation of companies, debt settlement, labour law,
                 tenancy disputes, appeals against payment orders - executions, enforcement of penalties, trademarks.</li>
                 <li>External work (filing-receipt of documents, communication with judicial officers, monitoring the progress of cases)</li>
                 <li>Legal research - Case-law searching</li>
@@ -173,7 +173,7 @@
                 <p><em>Theory and History of Art</em></p>
               </div>
               <div class="resume-item">
-                <h4> INTERSHIP IN AN FILM PRODUCTION COMPANY </h4>
+                <h4> INTERSHIP IN A FILM PRODUCTION COMPANY </h4>
                 <h5>November 2021 - December 2021</h5>
                 <p><em>Production organisation assistant at the film, TV and music production company
                     Laika
@@ -182,7 +182,7 @@
 Archival research for the pre production of documentaries.</em></p>
               </div>
               <div class="resume-item">
-                <h4>"AGGELWN VHMA" THEATER</h4>
+                <h4>"AGGELON VIMA" THEATER</h4>
                 <h5>November 2018 - March 2019</h5>
                 <p><em>Cooperation in the operation of theatre foyer.</em></p>
               </div>
