--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <title>Sofianna Bali - Cirriculum Vitae</title>
+  <title>Sofianna Bali - Curriculum Vitae</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
