--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="section-title">
           <img src="assets/img/IMG.png" alt="" class="img-fluid rounded-circle"
             style="float:center;width:200px">
-          <h2> Bali Sofianna - Cirriculum Vitae</h2>
+          <h2> Bali Sofianna - Curriculum Vitae</h2>
           <p>
             <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
             <strong>Phone number:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
