--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
               <h3 class="resume-title">Academic assignments</h3>
               <div class="resume-item">
                 <h4>Athens Law School</h4>
-                <h5>Winter semester 2018
+                <h5>Winter semester 2018.
                   Supervisor: Christodoulou Konstantinos</h5>
                 <p><em>"Photographers' copyright and their legal protection"</em></p>
               </div>
               <div class="resume-item">
-                <h5>Winter semester 2018
+                <h5>Winter semester 2018.
                   Supervisor: Koufou Athina</h5>
                 <p><em>"Antiquities. Illegal trafficking in cultural goods"</em></p>
               </div>
@@ -173,7 +173,7 @@
                 <p><em>Theory and History of Art</em></p>
               </div>
               <div class="resume-item">
-                <h4> INTERSHIP IN A FILM PRODUCTION COMPANY </h4>
+                <h4> INTERNSHIP IN A FILM PRODUCTION COMPANY </h4>
                 <h5>November 2021 - December 2021</h5>
                 <p><em>Production organisation assistant at the film, TV and music production company
                     Laika
